--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule ".vim/pack/plugin/start/vim-systemd-syntax"]
 	path = .config/vim/pack/plugin/start/vim-systemd-syntax
 	url = https://github.com/wgwoods/vim-systemd-syntax.git
+[submodule ".config/vim/pack/plugin/start/rust.vim"]
+	path = .config/vim/pack/plugin/start/rust.vim
+	url = https://github.com/rust-lang/rust.vim
