--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,9 @@
 [submodule ".config/vim/pack/plugin/start/vim-clap"]
 	path = .config/vim/pack/plugin/start/vim-clap
 	url = https://github.com/liuchengxu/vim-clap.git
+[submodule ".config/vim/pack/plugin/start/nerdcommenter"]
+	path = .config/vim/pack/plugin/start/nerdcommenter
+	url = https://github.com/preservim/nerdcommenter.git
+[submodule ".config/vim/pack/plugin/start/vim-gitgutter"]
+	path = .config/vim/pack/plugin/start/vim-gitgutter
+	url = https://github.com/airblade/vim-gitgutter.git
