--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -38,8 +38,8 @@ opengl-pbo=no                          # "yes" is currently bugged: https://gith
 
 vd-lavc-dr=yes
 
-icc-profile-auto
-icc-contrast=1000                      # silence some warning because the profile is bad
+#icc-profile-auto
+#icc-contrast=1000                      # silence some warning because the profile is bad
 
 
 
