--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -21,7 +21,7 @@ prefetch-playlist=yes
 
 screenshot-format=png
 screenshot-png-compression=8
-screenshot-template='~/Desktop/%F (%P) %n'
+screenshot-template='~/Pictures/mpv-screenshots/%F (%P) %n'
 
 hls-bitrate=max                         # use max quality for HLS streams
 
