--- a/.config/systemd/user/aria2.service
+++ b/.config/systemd/user/aria2.service
@@ -2,8 +2,8 @@
 Description=Aria2 Daemon
 
 [Service]
-Type=forking
-ExecStart=/usr/bin/aria2c --console-log-level=warn --daemon --conf-path=%h/.config/aria2/aria2.conf
+Type=exec
+ExecStart=aria2c --console-log-level=warn --daemon --conf-path=%h/.config/aria2/aria2.conf
 
 [Install]
 WantedBy=default.target
