--- a/.config/aria2/aria2.conf
+++ b/.config/aria2/aria2.conf
@@ -21,7 +21,7 @@ enable-peer-exchange=true
 
 enable-rpc=true
 rpc-allow-origin-all=true
-rpc-listen-all=false
+rpc-listen-all=true
 rpc-listen-port=6800
 
 
