--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -28,6 +28,8 @@ hls-bitrate=max                         # use max quality for HLS streams
 geometry=50%:50%                        # 50% window size
 autofit-larger=70%x60%                  # 
 
+script-opts=ytdl_hook-ytdl_path=yt-dlp
+
 #########
 # Video #
 #########
@@ -145,3 +147,9 @@ vd-lavc-threads=32
 profile-desc=cond:get('width', math.huge) < 3840
 vd-lavc-threads=0
 
+
+[bilibili-add-referrer]
+profile-desc = Add referrer for BiliBili video
+profile-cond = path:match("https://www.bilibili.com")~=nil
+profile-restore = copy
+referrer = https://www.bilibili.com/
