--- a/.config/systemd/user/aria2.service
+++ b/.config/systemd/user/aria2.service
@@ -3,7 +3,8 @@ Description=Aria2 Daemon
 
 [Service]
 Type=exec
-ExecStart=aria2c --console-log-level=warn --daemon --conf-path=%h/.config/aria2/aria2.conf
+Restart=on-abort
+ExecStart=aria2c --console-log-level=warn --conf-path=%h/.config/aria2/aria2.conf
 
 [Install]
 WantedBy=default.target
