--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,6 @@
 [submodule ".config/zsh/zgenom"]
 	path = .config/zsh/zgenom
 	url = https://github.com/jandamm/zgenom.git
+[submodule ".local/share/nvim/site/pack/packer/start/packer.nvim"]
+	path = .local/share/nvim/site/pack/packer/start/packer.nvim
+	url = https://github.com/wbthomason/packer.nvim.git
