--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -28,7 +28,7 @@ hls-bitrate=max                         # use max quality for HLS streams
 geometry=50%:50%                        # 50% window size
 autofit-larger=70%x60%                  # 
 
-script-opts=ytdl_hook-ytdl_path=yt-dlp
+#script-opts=ytdl_hook-ytdl_path=yt-dlp
 
 #########
 # Video #
