--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -103,7 +103,7 @@ audio-pitch-correction=yes              # automatically insert scaletempo when p
 volume-max=200                          # maximum volume in %, everything above 100 results in amplification
 volume=100                              # default volume, 100 = unchanged
 
-audio-channels=stereo
+#audio-channels=stereo
 #audio-normalize-downmix=yes             # 规格化
 
 ###################################
