--- a/.var/app/io.mpv.Mpv/config/mpv/input.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/input.conf
@@ -189,4 +189,4 @@
 # ? cycle program                       # cycle transport stream programs
 # ? stop                                # stop playback (quit or enter idle mode)
 F5 write-watch-later-config; loadfile "${path}"
-
+k script-binding stats/display-page-4
