--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -90,7 +90,7 @@ sub-font="Noto Sans CJK SC"
 # Languages #
 #############
 
-slang=chi,chs,zh,en,eng
+slang=chi,chs,zh,zh-Hans,en,eng
 alang=ja,jp,jpn,en,eng
 
 
@@ -153,3 +153,7 @@ profile-desc = Add referrer for BiliBili video
 profile-cond = path:match("https://www.bilibili.com")~=nil
 profile-restore = copy
 referrer = https://www.bilibili.com/
+ytdl-raw-options-append = cookies=~/.config/cookies/bilibili
+ytdl-raw-options-append = write-subs=
+ytdl-raw-options-append = sub-langs=zh.*
+
