--- a/.config/systemd/user/clash.service
+++ b/.config/systemd/user/clash.service
@@ -5,6 +5,7 @@ After=network.target
 [Service]
 Type=exec
 Restart=on-abort
+ExecSearchPath=%h/.nix-profile/bin
 ExecStart=clash -d %h/.config/clash
 LimitNOFILE=65536
 #AmbientCapabilities=CAP_NET_BIND_SERVICE CAP_NET_ADMIN
