--- a/.config/fontconfig/conf.d/51-default.conf
+++ b/.config/fontconfig/conf.d/51-default.conf
@@ -5,6 +5,7 @@
  <alias>
   <family>sans</family>
   <prefer>
+   <family>LXGW Neo XiHei</family>
    <family>Noto Sans CJK SC</family>
    <family>emoji</family>
   </prefer>
@@ -13,6 +14,7 @@
  <alias>
   <family>sans-serif</family>
   <prefer>
+   <family>LXGW Neo XiHei</family>
    <family>Noto Sans CJK SC</family>
    <family>emoji</family>
   </prefer>
