--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,12 +1,23 @@
 <?xml version='1.0'?>
 <fontconfig>
  <match target="font">
-  <edit mode="assign" name="rgba">
+  <edit name="rgba" mode="assign">
    <const>rgb</const>
   </edit>
  </match>
+ <dir>~/.fonts</dir>
  <match target="font">
-  <edit mode="assign" name="antialias">
+  <edit name="hinting" mode="assign">
+   <bool>true</bool>
+  </edit>
+ </match>
+ <match target="font">
+  <edit name="hintstyle" mode="assign">
+   <const>hintslight</const>
+  </edit>
+ </match>
+ <match target="font">
+  <edit name="antialias" mode="assign">
    <bool>true</bool>
   </edit>
  </match>
