--- a/.config/fontconfig/conf.d/51-alias.conf
+++ b/.config/fontconfig/conf.d/51-alias.conf
@@ -7,4 +7,51 @@
       <family>sans-serif</family>
     </prefer>
   </alias>
+
+  <alias>
+    <family>宋体</family>
+    <prefer>
+      <family>serif</family>
+    </prefer>
+  </alias>
+
+  <alias>
+    <family>SimSun</family>
+    <prefer>
+      <family>serif</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>NSimSun</family>
+    <prefer>
+      <family>serif</family>
+    </prefer>
+  </alias>
+
+  <alias>
+    <family>Microsoft Yahei</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>Microsoft YaHei UI</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+
+  <alias>
+    <family>BlinkMacSystemFont</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+
+  <alias>
+    <family>Times New Roman</family>
+    <prefer>
+      <family>serif</family>
+    </prefer>
+  </alias>
 </fontconfig>
