--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -112,11 +112,11 @@ volume=100                              # default volume, 100 = unchanged
 
 [protocol.https]
 cache=yes
-user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:57.0) Gecko/20100101 Firefox/58.0'
+#user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:57.0) Gecko/20100101 Firefox/58.0'
 
 [protocol.http]
 cache=yes
-user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:57.0) Gecko/20100101 Firefox/58.0'
+#user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:57.0) Gecko/20100101 Firefox/58.0'
 
 
 ###########
@@ -153,7 +153,7 @@ profile-desc = Add referrer for BiliBili video
 profile-cond = path:match("https://www.bilibili.com")~=nil
 profile-restore = copy
 referrer = https://www.bilibili.com/
+#script-opts-add=ytdl_hook-ytdl_path=yt-dlp
 ytdl-raw-options-append = cookies=~/.config/cookies/bilibili
-ytdl-raw-options-append = write-subs=
-ytdl-raw-options-append = sub-langs=zh.*
+ytdl-raw-options-append = sub-langs=zh.*,en.*
 
