--- a/.config/fontconfig/conf.d/51-default.conf
+++ b/.config/fontconfig/conf.d/51-default.conf
@@ -5,6 +5,7 @@
  <alias>
   <family>sans</family>
   <prefer>
+   <family>Noto Sans</family>
    <family>LXGW Neo XiHei</family>
    <family>Noto Sans CJK SC</family>
    <family>emoji</family>
@@ -14,6 +15,7 @@
  <alias>
   <family>sans-serif</family>
   <prefer>
+   <family>Noto Sans</family>
    <family>LXGW Neo XiHei</family>
    <family>Noto Sans CJK SC</family>
    <family>emoji</family>
@@ -23,7 +25,9 @@
  <alias>
   <family>serif</family>
   <prefer>
-   <family>LXGW WenKai Screen</family>
+   <family>Noto Serif</family>
+   <family>LXGW WenKai</family>
+   <family>Noto Serif CJK SC</family>
    <family>emoji</family>
   </prefer>
  </alias>
@@ -31,7 +35,9 @@
  <alias>
   <family>monospace</family>
   <prefer>
+   <family>Noto Sans Mono</family>
    <family>LXGW WenKai Mono</family>
+   <family>Noto Sans Mono CJK SC</family>
    <family>emoji</family>
   </prefer>
  </alias>
