--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -33,7 +33,7 @@ autofit-larger=70%x60%                  #
 #########
 # Video #
 #########
-hwdec=auto
+hwdec=vaapi
 opengl-es=yes
 opengl-early-flush=no
 opengl-pbo=no                          # "yes" is currently bugged: https://github.com/mpv-player/mpv/issues/4988
